<resources>
    <string name="net_warn_detail_doc">file:///android_asset/doc/default/network_warning.htm</string>
    <string name="qqsync_intro_doc">file:///android_asset/doc/default/qqsync_intro.htm</string>
    <string name="qqsync_privacy_doc">file:///android_asset/doc/default/qqsync_privacy.htm</string>
    <string name="qqsync_agreement_doc">http://weixin.qq.com/cgi-bin/readtemplate?check=false&amp;t=weixin_qqsync_agreement</string>
    <string name="qqsync_weburl_lang">\?hl=zh_CN</string>
    <string name="mm_tips">tips.xml</string>
    <string name="url_agreement">http://weixin.qq.com/agreement</string>
    <string name="url_getpassword">http://weixin.qq.com/getpassword?lang=zh_CN</string>
    <string name="url_getqqpassword">http://weixin.qq.com/getqqpassword?lang=zh_CN</string>
    <string name="sent_message">sound/sent_message.mp3</string>
    <string name="play_completed">sound/play_completed.mp3</string>
    <string name="time_limit">sound/time_limit.mp3</string>
    <string name="shake_sound_male">sound/shake_sound_male.mp3</string>
    <string name="shake_nomatch">sound/shake_nomatch.mp3</string>
    <string name="shake_match">sound/shake_match.mp3</string>
    <string name="app_name">微信</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_sending">正在发送...</string>
    <string name="app_set">设置</string>
    <string name="app_back">返回</string>
    <string name="app_cancel">取消</string>
    <string name="app_ok">确定</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_continue">继续</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_down_show_nexttime">下次不提示</string>
    <string name="app_pic">[图片]</string>
    <string name="app_voice">[语音]</string>
    <string name="app_video">[视频]</string>
    <string name="app_emoji">[自定义表情]</string>
    <string name="app_waiting">请稍候...</string>
    <string name="app_loading_data">正在载入数据...</string>
    <string name="app_empty_string" />
    <string name="app_new">new</string>
    <string name="app_download">下载</string>
    <string name="app_install">安装</string>
    <string name="app_canceling">取消中</string>
    <string name="app_downloading">下载中...</string>
    <string name="app_download_finish">下载完成</string>
    <string name="app_download_update_package">微信更新包下载</string>
    <string name="app_update_package_notify">微信更新包提醒</string>
    <string name="app_recommend_update">有新版本的微信，推荐更新</string>
    <string name="app_default">系统默认</string>
    <string name="app_zh_CN">简体中文</string>
    <string name="app_zh_TW">繁體中文</string>
    <string name="app_en">English</string>
    <string name="app_lang_sys">跟随系统设置</string>
    <string name="app_ignore_it">跳过</string>
    <string name="app_field_qquin">QQ号:</string>
    <string name="app_field_username">微信号:</string>
    <string name="app_field_weibo">微博号:</string>
    <string name="app_field_mobile">手机号:</string>
    <string name="app_field_voice">对讲</string>
    <string name="app_field_text">文字</string>
    <string name="app_field_smiley">表情</string>
    <string name="app_field_pic">图片</string>
    <string name="app_field_video">视频</string>
    <string name="app_field_card">名片</string>
    <string name="app_field_location">位置</string>
    <string name="scroll_bar_search">搜</string>
    <string name="group_all">全部联系人</string>
    <string name="group_weixin">通讯录</string>
    <string name="group_weibo">微博联系人</string>
    <string name="group_domainmail_suffix">" 同事"</string>
    <string name="group_blacklist">黑名单</string>
    <string name="official_nick">微信团队</string>
    <string name="media_ejected">储存卡已拔出，微信头像、图片、语音、地图及视频功能将暂时不可用</string>
    <string name="media_full">储存卡剩余空间不足，可能影响到微信图片、语音及视频等功能</string>
    <string name="hardcode_group">多人会话|群聊</string>
    <string name="hardcode_plugin_qqsync_nick">通讯录安全助手</string>
    <string name="hardcode_plugin_qqsync_pyinitial">TXLAQZS</string>
    <string name="hardcode_plugin_qqsync_quanpin">TONGXUNLUANQUANZHUSHOU</string>
    <string name="hardcode_plugin_bottle_nick">漂流瓶</string>
    <string name="hardcode_plugin_bottle_pyinitial">PLP</string>
    <string name="hardcode_plugin_bottle_quanpin">PIAOLIUPING</string>
    <string name="hardcode_plugin_lbs_nick">查看附近的人</string>
    <string name="hardcode_plugin_lbs_pyinitial">CKFJDR</string>
    <string name="hardcode_plugin_lbs_quanpin">CHAKANFUJINDEREN</string>
    <string name="hardcode_plugin_shake_nick">摇一摇</string>
    <string name="hardcode_plugin_shake_pyinitial">YYY</string>
    <string name="hardcode_plugin_shake_quanpin">YAOYIYAO</string>
    <string name="hardcode_plugin_medianote_nick">语音记事本</string>
    <string name="hardcode_plugin_medianote_pyinitial">YYJSB</string>
    <string name="hardcode_plugin_medianote_quanpin">YUYINJISHIBEN</string>
    <string name="hardcode_plugin_facebookapp_nick">Facebook</string>
    <string name="hardcode_plugin_facebookapp_pyinitial">Facebook</string>
    <string name="hardcode_plugin_facebookapp_quanpin">Facebook</string>
    <string name="hardcode_plugin_gmail_nick">Gmail提醒</string>
    <string name="hardcode_plugin_gmail_pyinitial">GMAILTX</string>
    <string name="hardcode_plugin_gmail_quanpin">GMAILTIXING</string>
    <string name="hardcode_plugin_qqfriend_nick">查看QQ好友</string>
    <string name="hardcode_plugin_qqfriend_pyinitial">CKQQHY</string>
    <string name="hardcode_plugin_qqfriend_quanpin">CHAKANQQHAOYOU</string>
    <string name="hardcode_plugin_masssend_nick">群发助手</string>
    <string name="hardcode_plugin_masssend_pyinitial">QFZS</string>
    <string name="hardcode_plugin_masssend_quanpin">QUNFAZHUSHOU</string>
    <string name="hardcode_plugin_qqmail_nick">QQ邮箱助手</string>
    <string name="hardcode_plugin_fmessage_nick">好友推荐助手</string>
    <string name="hardcode_plugin_tmessage_nick">私信助手</string>
    <string name="hardcode_plugin_qmessage_nick">QQ离线助手</string>
    <string name="hardcode_plugin_readerappnews_nick">腾讯新闻</string>
    <string name="hardcode_plugin_readerappnews_pyinitial">TXXW</string>
    <string name="hardcode_plugin_readerappnews_quanpin">TENGXUNXINWEN</string>
    <string name="hardcode_plugin_readerappweibo_nick">微博推荐</string>
    <string name="hardcode_plugin_readerappweibo_pyinitial">WBTJ</string>
    <string name="hardcode_plugin_readerappweibo_quanpin">WEIBOTUIJIAN</string>
    <string name="sex_male">男</string>
    <string name="settings_account_info">我的帐号</string>
    <string name="settings_tweibo_open">在名片中展示腾讯微博</string>
    <string name="settings_signature">个性签名</string>
    <string name="settings_skin">界面主题</string>
    <string name="settings_chatting_bg">聊天背景</string>
    <string name="settings_bind_mobile_title">手机通讯录匹配</string>
    <string name="settings_about_domainmail">工作邮箱</string>
    <string name="settings_plugins">系统插件</string>
    <string name="settings_plugins_install">安装该插件</string>
    <string name="settings_plugins_uninstall">卸载</string>
    <string name="settings_about_blacklist">黑名单</string>
    <string name="settings_about_privacy">隐私</string>
    <string name="settings_need_verify">加我为好友时需要验证</string>
    <string name="settings_recommend_to_QQfriends">将我推荐给QQ好友</string>
    <string name="settings_find_me_by_QQ">可通过QQ号找到我</string>
    <string name="settings_auto_add_reply_friends">回复陌生人自动添加为好友</string>
    <string name="settings_auto_add_reply_friends_tip">关闭后，回复陌生人不会自动添加为好友。</string>
    <string name="settings_find_me_by_mobile">可通过手机号搜索到我</string>
    <string name="settings_about_system">通用</string>
    <string name="settings_system_notice">系统通知</string>
    <string name="settings_about_micromsg">关于微信</string>
    <string name="settings_push_software">腾讯软件精品推荐</string>
    <string name="settings_username">微信号</string>
    <string name="settings_uin">QQ号</string>
    <string name="settings_mobile">手机号</string>
    <string name="settings_account">个人名片</string>
    <string name="settings_email_addr">邮件地址</string>
    <string name="settings_logout">退出登录</string>
    <string name="settings_reset">清空聊天记录</string>
    <string name="settings_notification">新消息提醒</string>
    <string name="settings_new_msg_notification">接收新消息通知</string>
    <string name="settings_sound">声音</string>
    <string name="settings_shake">震动</string>
    <string name="settings_active_time">后台接收消息时段</string>
    <string name="settings_plugings_notify">插件消息免打扰</string>
    <string name="settings_plugings_notify_tip">设置系统插件消息提示声音和震动时间</string>
    <string name="settings_language">多语言</string>
    <string name="settings_landscape_mode">开启横屏模式</string>
    <string name="settings_voicerecorder_mode">使用高速录音模式</string>
    <string name="settings_voice_play_mode">使用听筒播放语音</string>
    <string name="settings_traffic_statistic">流量统计</string>
    <string name="settings_market_ratings">去给微信打个分，评价一把</string>
    <string name="settings_feedback">意见反馈</string>
    <string name="contact_info_view_message">查看消息</string>
    <string name="contact_info_clear_data">清空此插件消息记录</string>
    <string name="contact_info_qqmailhelper_view">查看邮件</string>
    <string name="contact_info_qqmailhelper_compose">写邮件</string>
    <string name="contact_info_qqmailhelper_set_files_view">设置提醒文件夹</string>
    <string name="contact_info_qqmailhelper_recv_remind">接收邮件提醒</string>
    <string name="contact_info_verify_user_title_what">什么是微信认证？</string>
    <string name="contact_info_recommend_qqfriends_to_me">向我推荐QQ好友</string>
    <string name="contact_info_recommend_mobilefriends_to_me">向我推荐通讯录好友</string>
    <string name="contact_info_bind_mobile_entry_tip">匹配后可推荐开通了微信的通讯录好友。</string>
    <string name="contact_info_bind_qq_entry_tip">开启后可推荐你的QQ好友。</string>
    <string name="contact_info_qmessage_recv_offline_msg">接收离线消息</string>
    <string name="contact_info_qmessage_display_weixin_online">在QQ上显示微信在线</string>
    <string name="contact_info_qmessage_send_qq_message">发QQ消息</string>
    <string name="contact_info_microblog_friends">微博好友</string>
    <string name="contact_info_tmessage_recv_private_letter">接收私信</string>
    <string name="contact_info_go_to_sync">进入安全助手</string>
    <string name="contact_info_remind_me_syncing">定时提醒备份</string>
    <string name="contact_info_remind_me_syncing_tip">每14天提醒你备份通讯录</string>
    <string name="contact_info_qqsync_intro">使用说明</string>
    <string name="contact_info_qqsync_agreement">服务协议</string>
    <string name="contact_search_title">按号码查找</string>
    <string name="find_friends_by_qrcode">扫描二维码</string>
    <string name="find_friends_by_qq">查看QQ好友</string>
    <string name="find_friends_by_mobile">查看手机通讯录</string>
    <string name="bind_qq_start_title">绑定QQ号</string>
    <string name="send_qrcode_to_microblog">“秀”出我的二维码</string>
    <string name="room_name">群聊名称</string>
    <string name="room_save_to_contact">保存到通讯录</string>
    <string name="room_msg_close_notify">关闭群聊声音震动提醒</string>
    <string name="room_set_chatting_background">设置当前聊天背景</string>
    <string name="room_clear_chatting_history">清空对话记录</string>
    <string name="room_del_quit">删除并退出</string>
    <string name="nearby_friend_title">查看附近的人</string>
    <string name="bottle_beach_title">漂流瓶</string>
    <string name="shake_report_title">摇一摇</string>
    <string name="album_dyna_photo_ui_title">相册动态</string>
    <string name="contact_info_facebookapp_listfriend">查看好友</string>
    <string name="contact_info_facebookapp_connect">Connection</string>
    <string name="contact_info_facebookapp_showqrocode">“秀”二维码到Facebook</string>
    <string name="contact_info_bind_fb_entry_tip">可推荐开通了微信的Facebook好友。</string>
    <string name="contact_info_recommend_fbfriends_to_me">向我推荐Facebook好友</string>
    <string name="find_friends_by_facebook">查看Facebook好友</string>
</resources>