<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tencent.mm.ui.contact.HelperHeaderPreference android:layout="@layout/contact_info_header_helper" android:key="contact_info_header_helper" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_go_to_sync" android:key="contact_info_go_to_sync" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory android:key="contact_info_remind_me_syncing_cat" />
    <CheckBoxPreference android:layout="@layout/mm_preference" android:title="@string/contact_info_remind_me_syncing" android:key="contact_info_remind_me_syncing" />
    <Preference android:layout="@layout/mm_preference_info" android:title="@string/contact_info_remind_me_syncing_tip" android:key="contact_info_remind_me_syncing_tip" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_qqsync_intro" android:key="contact_info_qqsync_intro" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_qqsync_agreement" android:key="contact_info_qqsync_agreement" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory android:key="contact_info_qqsync_hide_cat" />
    <Preference android:layout="@layout/install_btn" android:title="@string/settings_plugins_install" android:key="contact_info_qqsync_install" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/logout_btn" android:title="@string/settings_plugins_uninstall" android:key="contact_info_qqsync_uninstall" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory android:key="contact_info_qqsync_hide_cat2" />
</PreferenceScreen>
