<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.tencent.mm.ui.contact.HelperHeaderPreference android:layout="@layout/contact_info_header_helper" android:key="contact_info_header_helper" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_facebookapp_listfriend" android:key="contact_info_facebookapp_listfriend" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_facebookapp_connect" android:key="contact_info_facebookapp_connect" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory android:key="contact_info_facebookapp_cat" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/hardcode_plugin_facebookapp_nick" android:key="contact_info_facebookapp_addr" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/mm_preference" android:title="@string/contact_info_facebookapp_showqrocode" android:key="contact_info_facebookapp_showqrcode" android:widgetLayout="@layout/mm_preference_screen" />
    <PreferenceCategory android:key="contact_info_facebookapp_cat2" />
    <Preference android:layout="@layout/install_btn" android:title="@string/settings_plugins_install" android:key="contact_info_facebookapp_install" android:widgetLayout="@layout/mm_preference_screen" />
    <Preference android:layout="@layout/logout_btn" android:title="@string/settings_plugins_uninstall" android:key="contact_info_facebookapp_uninstall" android:widgetLayout="@layout/mm_preference_screen" />
</PreferenceScreen>
